<resources>
    <string name="app_name">买手妈妈</string>
    <string name="mine">我的</string>
    <string name="luntan">买手圈</string>
    <string name="zhoubian">分类</string>
    <string name="home">首页</string>
    <string name="nearOverText">即将售罄</string>
    <string name="overText">已售罄</string>
    <string name="title_home">首页</string>
    <string name="gouwuche">购物车</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zhengzhou">郑州</string>
    <string name="product">商品</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="search_want_find">搜索商家/地点/酒店/民宿</string>
    <string name="hot_product">热门商品</string>
    <string name="catogory">分类</string>
    <string name="market">超市</string>
    <string name="up_to">充值</string>
    <string name="input_up_to_money">请输入充值金额</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat_safe_pay">微信安全支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="ali_safe_pay">支付宝安全支付</string>
    <string name="next">下一步</string>
    <string name="user_login">用户登录</string>
    <string name="input_user_name">请输入手机号</string>
    <string name="input_user_phone">请输入手机号</string>
    <string name="input_pass">请输入密码</string>
    <string name="input_invite">请输入邀请码</string>
    <string name="login">登录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="no_account">没有账号？</string>
    <string name="register_now">立即注册</string>
    <string name="personal_info">个人信息</string>
    <string name="head">头像</string>
    <string name="nickname">用户名</string>
    <string name="save">保存</string>
    <string name="shop_auth">申请店铺</string>
    <string name="upload_logo">上传店铺logo</string>
    <string name="click_upload">点击上传</string>
    <string name="shop_name">店铺名字</string>
    <string name="phone">联系电话</string>
    <string name="bussiness_license">营业执照</string>
    <string name="submit_msg">提交信息</string>
    <string name="shop_car_is_empty">购物车是空的</string>
    <string name="recommend_for_you">为你推荐</string>
    <string name="factory_two">华阳二厂</string>
    <string name="comment">评论</string>
    <string name="my_account">我的账户</string>
    <string name="account_rest">账户余额</string>
    <string name="withdraw">提现</string>
    <string name="submit">提交</string>
    <string name="input_your_comment">输入您的评价</string>
    <string name="choose_all">全选</string>
    <string name="total">合计 :</string>
    <string name="hot_type">热门分类</string>
    <string name="popular_product">人气商品</string>
    <string name="hot_search">热门搜索</string>
    <string name="wait_refund">等待退款</string>
    <string name="my_order">我的订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="wait_comment">待评价</string>
    <string name="refund">售后</string>
    <string name="wallet">钱包</string>
    <string name="mywallet">我的余额</string>
    <string name="collect">收藏</string>
    <string name="location_manage">收货地址</string>
    <string name="setting">设置</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_pay">待付款</string>
    <string name="my_collect">我的收藏</string>
    <string name="message">消息</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_auth_code">输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="input_new_pass">输入新密码</string>
    <string name="ensure_new_pass">重复输入新密码</string>
    <string name="user_register">用户注册</string>
    <string name="new_pass_again">请确认新密码</string>
    <string name="register">注册</string>
    <string name="have_account">已有账号？</string>
    <string name="login_now">立即登录</string>
    <string name="change_pass">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="clean_cache">清理缓存</string>
    <string name="about_us">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="find_pass">找回密码</string>
    <string name="pass_again">请确认密码</string>
    <string name="over">完成</string>
    <string name="doorplate">详细地址</string>
    <string name="like_201">请填写详细地址</string>
    <string name="weizhi">请选择所属位置</string>
    <string name="input_consignee_name">请填写收货人的姓名</string>
    <string name="consignee">收货人:</string>
    <string name="input_contact_phone">请填写手机号码</string>
    <string name="contact_phone">联系方式:</string>
    <string name="contact_us">联系我们</string>
    <string name="my_red_packet">我的红包</string>
    <string name="use_now">立即使用</string>
    <string name="third_login">其他登录方式</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="apply_refund">申请退货</string>
    <string name="choose_color_size">请选择颜色和尺码</string>
    <string name="credit">信誉度:</string>
    <string name="enter_factory">进入厂家</string>
    <string name="detail">详情</string>
    <string name="buy_now">结算</string>
    <string name="add_shop_car">加入购物车</string>
    <string name="order_detail">订单详情</string>
    <string name="logistics_freight">物流运费</string>
    <string name="redpacket_deduction">红包抵扣</string>
    <string name="cost_total">消费合计</string>
    <string name="choose_pay_type">选择付款方式</string>
    <string name="use_redpacket">使用红包</string>
    <string name="account_balance">账户余额</string>
    <string name="submit_order">立即付款</string>
    <string name="recommend">推荐</string>
    <string name="add_new_location">添加新地址</string>
    <string name="set_default">设为默认</string>
    <string name="color">颜色</string>
    <string name="size">尺码</string>
    <string name="count">数量</string>
    <string name="choose_cancel_reason">请选择取消订单的理由</string>
    <string name="dont_buy">我不想买了</string>
    <string name="msg_wrong_buy_again">信息填写错误，重新拍</string>
    <string name="sealer_oos">卖家缺货</string>
    <string name="other_reason">其他原因</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="take_from_album">从相册中选择</string>
    <string name="take_photo">拍照</string>
    <string name="input_your_new_name">请输入你的新名称</string>
    <string name="new_name">新名称</string>
    <string name="send_success">发送成功，请注意查收~</string>
    <string name="register_success">注册成功</string>
    <string name="phone_not_null">电话号不能为空</string>
    <string name="please_complete">请完善基本信息</string>
    <string name="feedback">意见反馈</string>
    <string name="choose_city_first">请先选择省市县</string>
    <string name="search_content_cant_be_null">搜索内容不能为空</string>
    <string name="have_no_data">暂无数据</string>
    <string name="user_feedback">用户反馈</string>
    <string name="what_want_say_to_us">您有什么问题或建议想对我们说</string>
    <string name="add_your_feedback_pics">添加您反馈的问题图片</string>
    <string name="add_pic">添加图片</string>
    <string name="feedback_content_cant_be_null">反馈内容不能为空</string>
    <string name="factory_shop">厂家店铺</string>
    <string name="attention">关注</string>
    <string name="attention_people_count">关注人数:</string>
    <string name="update_tip">更新提示</string>
    <string name="update">更新</string>
    <string name="address">地址</string>
    <string name="click_access">点击获取</string>
    <string name="input_right_phone">电话号码不能为空</string>
    <string name="choose_pro_size">请选择产品规格</string>

    <string name="accessibility_tip">买手妈妈[多图分享，自动选图]</string>
    <string name="accessibility_desc">到[设置->辅助功能->无障碍->买手妈妈[多图分享，自动选图]]去开启分享朋友圈自动选择选图功能。
        \n开启该服务后，可分享多图到朋友圈（自动粘贴文字，自动选择图片，无需动手操作）。\n
        个别型号的手机，退出APP后，手机会关闭该功能导致失败。出现该情况后，您可以尝试关闭并重新打开该服务，或者重启手机。</string>

</resources>
