<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    style="@style/transparent_statusbar_fit"
    android:orientation="vertical">

    <include layout="@layout/include_header" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_search_home"
        android:hint="@string/input_phone"
        android:paddingStart="8dp"
        android:textColorHint="@color/nine"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/et_auth_code"
            android:layout_width="200dp"
            android:layout_height="34dp"

            android:layout_marginStart="40dp"
            android:background="@drawable/bg_search_home"
            android:hint="@string/input_auth_code"
            android:paddingStart="8dp"
            android:textColorHint="@color/nine"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_login"
            android:padding="10dp"
            android:text="@string/get_auth_code"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_search_home"
        android:hint="@string/input_pass"
        android:paddingStart="8dp"
        android:textColorHint="@color/nine"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_ensure_pass"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_search_home"
        android:hint="@string/pass_again"
        android:paddingStart="8dp"
        android:textColorHint="@color/nine"
        android:textSize="13sp" />

    <Button
        android:id="@+id/bt_over"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:text="@string/over"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>
