<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    style="@style/transparent_statusbar_fit"
    android:orientation="vertical"
    tools:context="com.d2956987215.mow.activity.login.LoginActivity">

    <include layout="@layout/include_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="30dp"
        android:text="输入手机号码"
        android:textColor="#666666"
        android:textSize="26dp" />


    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:background="@null"
        android:drawablePadding="5dp"
        android:hint="@string/input_user_name"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:text=""
        android:textColor="@color/dark"
        android:textColorHint="#999999"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:background="@color/d4" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawablePadding="5dp"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:text=""
        android:textColor="@color/dark"
        android:textColorHint="#999999"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:background="@color/d4" />

    <TextView
        android:id="@+id/tv_duanxin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="8dp"
        android:paddingTop="15dp"
        android:text="短信验证码登录"
        android:textColor="@color/First"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/bg_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:text="@string/forget_pass"
            android:textColor="@color/hot_product"
            android:textSize="10sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forget_pass"
                android:textColor="@color/eight"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_now"
                android:textColor="@color/hot_product"
                android:textSize="10sp"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
