<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    style="@style/transparent_statusbar_fit"
    tools:context="com.d2956987215.mow.activity.login.RegisterActivity">

    <include layout="@layout/include_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="30dp"
        android:text="输入邀请信息"
        android:textColor="#666666"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_invite"
            android:paddingStart="8dp"
            android:textColorHint="@color/nine"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/ic_saoma"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@mipmap/saoma" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:background="@color/d4" />

    <RelativeLayout
        android:id="@+id/rl_invite_info"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:visibility="invisible"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_yaoqing">


        <com.d2956987215.mow.widgets.CircleImageView
            android:id="@+id/circle_head"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="23dp"
            android:layout_toRightOf="@+id/circle_head"
            android:text="星空"
            android:textColor="#ff333333"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/circle_head"
            android:text="邀请您加入买手妈妈"
            android:textColor="#999999"
            android:textSize="12sp" />

    </RelativeLayout>


    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:text="下一步"
        android:textColor="@color/white"
        android:clickable="false"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/nine"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_now"
            android:textColor="@color/hot_product"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>
